avance de estilos para img -header

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,4 +88,12 @@ body {
 /* Fin Menú de Navegación */
 
 
-/* IMG - Header */
+/* Inicio IMG - Header */
+.img-header {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    /* me quede en el min 28.07 */
+}
+
+/* Fin IMG - Header */
