--- a/css/styles.css
+++ b/css/styles.css
@@ -229,3 +229,77 @@ body {
 }
 
 /* Fin Acerca de Nosotros */
+
+
+/* Inicio Nuestros Proyectos */
+.our-projects {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(../img/banner_projects.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    margin-top: 120px;
+}
+
+.our-projects .deg-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.our-projects .eje2project {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.our-projects .container-project {
+    width: 100%;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.our-projects .container-project .project-title {
+    border: 2px solid #Fff;
+    padding: 10px;
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
+.our-projects .container-project .project-title h2 {
+    font-size: 40px;
+    color: #fff;
+    font-weight: normal;
+}
+
+.our-projects .container-project .project-title hr {
+    background: #fff;
+    width: 50%;
+    height: 3px;
+    margin: 10px auto;
+}
+
+.our-projects .container-project .project-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 80px;
+    padding-bottom: 100px;
+}
+
+.our-projects .container-project .project-img img {
+    width: calc(30% - 10px);
+    margin: 20px;
+    object-fit: cover;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+/* Fin Nuestros Proyectos */
