faltan ajustes pero ya esta casi al 90% los estilos de la sección del footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -390,5 +390,170 @@ body {
     color: var(--blue);
 }
 
-/* me quede en el min 50:00 */
 /* Fin Testimonios */
+
+
+/* Inicio Footer */
+.footer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(../img/footer.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
+.footer .deg-footer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.footer .eje2footer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.footer .footer-content {
+    padding-top: 100px;
+    width: 90%;
+    margin: auto;
+}
+
+.footer .footer-content .footer-title {
+    width: 50%;
+    margin: auto;
+    border: 2px solid #fff;
+    padding: 15px;
+}
+
+.footer .footer-content .footer-title h2 {
+    font-size: 35px;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.footer .footer-content .footer-title hr {
+    background: #fff;
+    height: 2px;
+    width: 80%;
+    margin: auto;
+}
+
+.footer .formulario-content {
+    width: 60%;
+    margin: 50px auto;
+    background: #Fff;
+    padding: 30px;
+    border-radius: 50px;
+    border: 1.5px solid var(--red);
+    margin-bottom: 100px;
+}
+
+.footer .formulario-content #formulario {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.footer .formulario-content #formulario label {
+    font-size: 20px;
+    text-align: center;
+    color: var(--black);
+    margin: 30px 0px 10px 0px;
+}
+
+.footer .formulario-content #formulario input {
+    width: 90%;
+    height: 40px;
+    margin: auto;
+    border-radius: 24px;
+    outline: none;
+    border: 1.5px solid var(--red);
+    text-align: center;
+    font-size: 18px;
+    color: var(--black);
+}
+
+.footer .formulario-content #formulario textarea {
+    width: 90%;
+    height: 200px;
+    margin: auto;
+    border-radius: 24px;
+    outline: none;
+    border: 1.5px solid var(--red);
+    padding: 20px;
+    font-size: 15px;
+    color: var(--black);
+}
+
+.footer .formulario-content #formulario .send {
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer .formulario-content #formulario .send button {
+    width: 120px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    background-color: var(--red);
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.footer .formulario-content #formulario .send button:hover {
+    background: var(--blue);
+    color: var(--black);
+}
+
+
+.footer .formulario-content #formulario .mensaje-form {
+    width: 100%;
+    margin: auto;
+    padding: 20px;
+}
+
+.footer .formulario-content #formulario .mensaje-form p {
+    font-size: 19px;
+    color: var(--black);
+    line-height: 35px;
+}
+
+/* .footer .footer-text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 2px solid #fff;
+} */
+
+/* 
+.footer .footer-text p {
+    font-size: 20px;
+    text-align: center;
+    color: #fff;
+} */
+
+
+/* me quede en el min 1:01:22 */
+
+/* Fin Footer */
