--- a/css/styles.css
+++ b/css/styles.css
@@ -533,8 +533,8 @@ body {
     line-height: 35px;
 }
 
-/* .footer .footer-text {
-    position: absolute;
+.footer .footer-text {
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
@@ -544,14 +544,14 @@ body {
     justify-content: center;
     align-items: center;
     border-top: 2px solid #fff;
-} */
+}
 
-/* 
+
 .footer .footer-text p {
     font-size: 20px;
     text-align: center;
     color: #fff;
-} */
+}
 
 
 /* me quede en el min 1:01:22 */
