--- a/css/styles.css
+++ b/css/styles.css
@@ -553,7 +553,70 @@ body {
     color: #fff;
 }
 
-
-/* me quede en el min 1:01:22 */
-
 /* Fin Footer */
+
+
+/* Inicio Media Query */
+@media only screen and (max-width:900px) {
+    .btn-menu>.fa-bars {
+        display: block;
+        position: absolute;
+        right: 30px;
+        top: 20px;
+        font-size: 28px;
+        color: var(--black);
+        transition: 0.5s;
+        cursor: pointer;
+    }
+
+    .btn-menu>.fa-bars:hover {
+        color: var(--red);
+    }
+
+    .btn-menu>.fa-times {
+        color: var(--red);
+    }
+
+    .menu .list-container {
+        position: fixed;
+        top: 60px;
+        left: -100%;
+        background: #fff;
+        width: 100%;
+        height: calc(100vh - 60px);
+    }
+
+    .menu .list-container .lists {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        border-top: 4px solid var(--red);
+    }
+
+    .menu .list-container .lists li {
+        width: 90%;
+        border-bottom: 2px solid var(--black);
+        display: flex;
+        justify-content: center;
+    }
+
+    .menu .list-container .lists li a {
+        font-size: 18px;
+        text-align: center;
+        padding: 12px 0px;
+    }
+
+    .menu .list-container .lists li a.activo {
+        background: none;
+        color: var(--red);
+    }
+
+    .menu .list-container .lists li a:hover {
+        background: none;
+        color: var(--red);
+    }
+
+}
