--- a/css/styles.css
+++ b/css/styles.css
@@ -678,3 +678,89 @@ body {
     }
 
 }
+
+@media only screen and (max-width:773px) {
+
+    /* Img - Header */
+    .img-header .welcome h1 {
+        font-size: 40px;
+    }
+
+    .img-header .welcome>button {
+        width: 130px;
+        font-size: 20px;
+    }
+
+    /* Acerca de Nosotros */
+    .acerca-de .info-container .about-gallery {
+        flex-direction: column;
+    }
+
+    .acerca-de .info-container .about-gallery img {
+        width: 100%;
+    }
+
+    /* Nuestros Proyectos */
+    .our-projects .container-project .project-img img {
+        width: 80%;
+        margin-bottom: 30px;
+    }
+}
+
+@media only screen and (max-width:590px) {
+
+    /* IMg -Header */
+    .img-header .welcome h1 {
+        font-size: 30px;
+    }
+
+    .img-header .welcome hr {
+        width: 80%;
+    }
+
+    .img-header .welcome p {
+        font-size: 17px;
+    }
+
+    .img-header .welcome>button {
+        width: 150px;
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width:890px) {
+
+    /* Testimonios */
+    .testimonios .box-testimonios .card-testimonio .card-img img {
+        width: 200px;
+        height: 200px;
+    }
+
+    .testimonios .box-testimonios .card-testimonio {
+        width: 100%;
+    }
+
+    .testimonios .box-testimonios .card-testimonio .testimonio-text h4 {
+        font-size: 25px;
+    }
+
+    .testimonios .box-testimonios .card-testimonio .testimonio-text p {
+        font-size: 17px;
+        line-height: 35px;
+    }
+}
+
+@media screen and (max-width:900px) {
+    .footer .formulario-content {
+        width: 85%;
+        padding: 20px;
+    }
+
+    .footer .formulario-content #formulario input {
+        width: 100%;
+    }
+
+    .footer .formulario-content #formulario textarea {
+        width: 100%;
+    }
+}
