--- a/css/styles.css
+++ b/css/styles.css
@@ -764,3 +764,112 @@ body {
         width: 100%;
     }
 }
+
+@media only screen and (max-width:400px) {
+
+    /* Img - Header */
+    .img-header .welcome h1 {
+        font-size: 20px;
+    }
+
+    .img-header .welcome p {
+        font-size: 17px;
+    }
+
+    .img-header .welcome>button {
+        width: 150px;
+        font-size: 15px;
+    }
+
+    /*  Acerca de Nosotros */
+    .acerca-de .info-container h1 {
+        font-size: 25px;
+    }
+
+    .acerca-de .info-container p {
+        font-size: 17px;
+        line-height: 20px;
+    }
+
+    .acerca-de .info-container .about-gallery img {
+        width: 90%;
+        height: 90%;
+    }
+
+    /* Nuestros Proyecytos */
+    .our-projects .container-project .project-title h2 {
+        font-size: 25px;
+    }
+
+    .our-projects .container-project .project-title hr {
+        width: 80%;
+    }
+
+    /* Testimonios */
+    .testimonios .testimonios-title h2 {
+        font-size: 25px;
+    }
+
+    .testimonios .testimonios-title hr {
+        width: 80%;
+    }
+
+    .testimonios .box-testimonios .card-testimonio .card-img img {
+        width: 150px;
+        height: 150px;
+    }
+
+    .testimonios .box-testimonios .card-testimonio {
+        width: 100%;
+    }
+
+    .testimonios .box-testimonios .card-testimonio .testimonio-text h4 {
+        font-size: 20px;
+    }
+
+    .testimonios .box-testimonios .card-testimonio .testimonio-text p {
+        font-size: 15px;
+        line-height: 22px;
+    }
+
+    /* Footer */
+    .footer .footer-content .footer-title h2 {
+        font-size: 22px;
+    }
+
+    .footer .footer-content .footer-title hr {
+        width: 80%;
+    }
+
+    .footer .formulario-content {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .footer .formulario-content #formulario input {
+        width: 70%;
+    }
+
+    .footer .formulario-content #formulario textarea {
+        width: 80%;
+    }
+
+    .footer .formulario-content #formulario label {
+        font-size: 18px;
+    }
+
+    .footer .formulario-content #formulario input {
+        font-size: 17px;
+    }
+
+
+    .footer .formulario-content #formulario .mensaje-form p {
+        font-size: 17px;
+        line-height: 20px;
+    }
+
+    .footer .footer-text p {
+        font-size: 17px;
+    }
+
+}
